main-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-app-dep
  namespace: main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-app
  template:
    metadata:
      labels:
        app: main-app
    spec:
      volumes:
        - name: files
          persistentVolumeClaim:
            claimName: main-app-claim
      containers:
      - name: main-app-hash
        image: koxanybak/hash
        volumeMounts:
          - mountPath: /app/files
            name: files
        resources:
          limits:
            cpu: "150m"
            memory: "100Mi"
            
      - name: main-app-stamp
        image: koxanybak/stamp
        volumeMounts:
          - mountPath: /app/files
            name: files
        resources:
          limits:
            cpu: "150m"
            memory: "100Mi"
